--- a/index.html
+++ b/index.html
@@ -446,7 +446,9 @@
 
     </div>
 
-    <div class="credits">Kuva <a href="https://twitter.com/RistoNylund/status/1073552742101204998">Risto Nylund</a>, Aikataulutiedot <a href="https://www.fintraffic.fi">Fintraffic</a>, Toteutus <a href="https://github.com/kyberias">J. Haakana</a></div>
+    <div class="credits">Kuva <a href="https://twitter.com/RistoNylund/status/1073552742101204998">Risto Nylund</a>, 
+        Aikataulutiedot <a href="https://www.fintraffic.fi">Fintraffic</a>, 
+        Idea ja toteutus <a href="https://github.com/kyberias">J. Haakana</a>.</div>
 
 
 </body>
